--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR" class="light">
+<html lang="pt-BR" class="">
 
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,14 +27,58 @@
 </head>
 
 <body>
+    <div id="container">
+        <div id="profile">
+            <img src="assets/avatar.png" alt="avatar" />
+            <p>@thahyanacosta</p>
+        </div>
 
-    <header>
+        <div id="switch" onclick="toggleMode()">
+            <button>
 
-    </header>
+            </button>
+            <span></span>
 
-    <footer>
-        <!-- Rodapé do site -->
-    </footer>
+        </div>
+
+        <ul>
+            <li>
+                <a href="#">Inscrever-se no NLW</a>
+            </li>
+            <li>
+                <a href="#">Baixar meu e-book</a>
+            </li>
+            <li>
+                <a href="https://github.com/Thahyana">Ver meu portfólio</a>
+            </li>
+            <li>
+                <a href="https://rocketseat.com.br/explorer">Conheça o explorer</a>
+            </li>
+        </ul>
+        <div id="social-links">
+            <a href="https://github.com/Thahyana">
+                <ion-icon name="logo-github"></ion-icon>
+            </a>
+            <a href="https://www.instagram.com/thahyanacosta/">
+                <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+            <a href="#">
+                <ion-icon name="logo-youtube"></ion-icon>
+            </a>
+            <a href="https://www.linkedin.com/in/thahyana-costa-23ba03375/">
+                <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+        </div>
+        <footer>
+            Feito com <ion-icon name="heart-outline"></ion-icon> pela <a
+                href="https://rocketseat.com.br/">Rocketseat</a>
+        </footer>
+    </div>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
