--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <div id="container">
         <div id="profile">
-            <img src="assets/avatar.png" alt="avatar" />
+            <img src="assets/thaylight.jpg" alt="avatar" />
             <p>@thahyanacosta</p>
         </div>
 
