--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@
 
         <ul>
             <li>
-                <a href="#">Inscrever-se no NLW</a>
+                <a
+                    href="https://wa.me/5585981070550?text=Ol%C3%A1%20seja%20bem%20vindo%20a%20Pixel%20Box%20%F0%9F%8C%90.%20Aqui%20voc%C3%AA%20encontra%20o%20melhor%20da%20tecnologia.%20Em%20breve%20iremos%20lhe%20atender">WhatsApp</a>
             </li>
             <li>
-                <a href="#">Baixar meu e-book</a>
+                <a href="https://www.instagram.com/thahyanacosta/">Instagram</a>
             </li>
             <li>
                 <a href="https://github.com/Thahyana">Ver meu portfólio</a>
             </li>
             <li>
-                <a href="https://rocketseat.com.br/explorer">Conheça o explorer</a>
+                <a href="https://www.facebook.com/thahyanacosta/">Facebook</a>
             </li>
         </ul>
         <div id="social-links">
