--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul>
             <li>
                 <a
-                    href="https://wa.me/5585981070550?text=Ol%C3%A1%20seja%20bem%20vindo%20a%20Pixel%20Box%20%F0%9F%8C%90.%20Aqui%20voc%C3%AA%20encontra%20o%20melhor%20da%20tecnologia.%20Em%20breve%20iremos%20lhe%20atender">WhatsApp</a>
+                    href="https://wa.me/5585981070550?text=Ol%C3%A1%2C%20tudo%20bem%20%3F%20Me%20chamo%20Thahyana%20e%20sou%20desenvolvedora%20Front-End.%20Em%20que%20posso%20lhe%20ajudar%20%3F">WhatsApp</a>
             </li>
             <li>
                 <a href="https://www.instagram.com/thahyanacosta/">Instagram</a>
